# koclaw

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.yml  persona.yaml  persona.yaml.example
.cargo/: config.toml
agent/: Dockerfile  pyproject.toml
agent/knowledge/: agent-learnings.md
agent/koclaw_agent/: __init__.py  __main__.py  autonomous.py  bridge.py  calendar_store.py  calendar_tools.py  config.py  expression.py  llm_router.py  memory_tools.py  persona.py  scheduler_tools.py  self_check.py  self_improving.py
agent/koclaw_agent/mcp_host/: __init__.py  clawhub_client.py  server_manager.py  skill_loader.py  skill_parser.py  tool_permissions.py  tool_prompt.py
agent/koclaw_agent/memory/: __init__.py  base.py  chat_history.py  rag_memory.py
agent/koclaw_agent/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
agent/koclaw_agent/voice/: __init__.py  base_asr.py  base_tts.py  faster_whisper_asr.py  gpt_sovits.py
agent/tests/: test_autonomous.py  test_clawhub_client.py  test_expression.py  test_mcp_host.py  test_mcp_session.py  test_memory.py  test_memory_tools.py  test_rag_memory.py  test_scheduler_tools.py  test_self_check.py  test_self_improving.py  test_skill_loader.py  test_skill_parser.py  test_tool_permissions.py  test_tool_prompt.py
channels/: Cargo.toml
channels/src/: discord.rs  lib.rs  qq.rs  telegram.rs  websocket_channel.rs
common/: Cargo.toml
common/src/: channel.rs  crypto.rs  error.rs  lib.rs  memory.rs  message.rs  permission.rs  persona.rs  sandbox.rs
desktop/: koclaw-config.json
docs/: CHANGELOG.md  DEVELOPMENT.md
docs/api/: gateway-api.md  web-sdk-api.md
docs/architecture/: overview.md  trait-design.md
docs/channels/: qq.md  telegram.md
docs/integration/: shinblog-integration.md
docs/plans/: 2026-02-27-phase1-gateway-and-channels.md  2026-02-27-phase2-security-discord-memory.md  2026-02-27-phase3-aikokoron-integration.md  2026-03-01-phase4-mcp-and-clawhub.md
docs/security/: encryption-design.md
gateway/: Cargo.toml
gateway/src/: agent_bridge.rs  config.rs  lib.rs  main.rs  router.rs  static_server.rs
gateway/src/scheduler/: engine.rs  job.rs  mod.rs  store.rs
gateway/tests/: integration_test.rs
workspace/: HEARTBEAT.md
