[workspace]
resolver = "2"
members = [
    "gateway",
    "common",
    "channels",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/yourusername/koclaw"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# Cryptography
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Config
config = "0.14"

# HTTP server (for static file serving)
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Scheduler
uuid = { version = "1", features = ["v4"] }
cron = "0.15"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Shared crates
koclaw-common = { path = "common" }
koclaw-channels = { path = "channels" }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
