[package]
name = "koclaw-channels"
version.workspace = true
edition.workspace = true

[features]
default = ["telegram"]
telegram = ["dep:reqwest"]
qq = ["dep:reqwest"]
discord = ["dep:reqwest", "dep:tokio-tungstenite", "dep:futures-util"]
websocket = ["dep:tokio-tungstenite", "dep:futures-util"]

[dependencies]
koclaw-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
futures-util = { version = "0.3", optional = true }
