[package]
name = "koclaw-gateway"
version.workspace = true
edition.workspace = true

[lib]
name = "koclaw_gateway"
path = "src/lib.rs"

[[bin]]
name = "koclaw"
path = "src/main.rs"

[dependencies]
koclaw-common = { workspace = true }
koclaw-channels = { workspace = true, features = ["telegram", "qq", "discord", "websocket"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = "0.3"
axum = { workspace = true }
tower-http = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
cron = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
